--- a/TP_MIXTE.ipynb
+++ b/TP_MIXTE.ipynb
@@ -10,10 +10,7 @@
     "\n",
     "---\n",
     "Done by :\n",
-    "*ELMAHFOUD Radouane* -\n",
-    "*EL HAFI Farah* -\n",
-    "*LMOURID Safae* -\n",
-    "*LMOURID Hanae*.\n",
+    "*ELMAHFOUD Radouane*
     "\n",
     " "
    ]
